Publish the port which ionic uses

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -15,6 +15,8 @@ ARG USERNAME=vscode
 ARG USER_UID=1001
 ARG USER_GID=$USER_UID
 
+EXPOSE 8100
+
 # Configure apt and install packages
 RUN apt-get update \
     && apt-get -y install --no-install-recommends apt-utils dialog 2>&1 \ 
@@ -35,6 +37,9 @@ RUN apt-get update \
     #
     # Install eslint globally
     && npm install -g eslint \
+    #
+    # Install the ionic environment
+    && npm install -g ionic cordova \
     #
     # Create a non-root user to use if preferred - see https://aka.ms/vscode-remote/containers/non-root-user.
     && if [ "$USER_GID" != "1000" ]; then groupadd --gid $USER_GID $USERNAME; fi \
